--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <script>
       var socket = io();
     </script>
+
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+
     <!-- Phaser -->
     <script type="text/javascript"
     src="/assets/js/phaser/phaser.js"></script>
