--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      var socket = io();
+      var socket = io('/game');
     </script>
 
     <!-- jquery -->
