added a game over state and added the ability to be killed by other players

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
     <script type="text/javascript"
     src="/assets/js/phaser/phaser.js"></script>
 
+    <!-- gameOverState -->
+    <script type="text/javascript"
+    src="/assets/js/game/gameOverState.js"></script>
+
     <!-- gameState -->
     <script type="text/javascript"
     src="/assets/js/game/gameState.js"></script>
