--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,10 @@
     </div>
 
     <div id="chatDiv">
-      <form>
-        <input type="text"/>
-
+      <h3>Chat</h3>
+      <ul id="messages"></ul>
+      <form action="" onsubmit="myFunction(); return false;">
+        <input id="m" autocomplete="off" /><button>Send</button>
       </form>
     </div>
   </body>
